force-app/main/default/objects/SummarizedRevenue__c/SummarizedRevenue__c.object-meta.xml
<CustomObject>
    <description>[SummarizedRevenue__c] Faturamentos sumarizados, originados no BI</description>
    <label>Faturamento Sumarizado</label>
    <nameField>
        <label>Nome de Faturamento Sumarizado</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Faturamentos Sumarizados</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>