force-app/main/default/objects/SummarizedRevenue__c/fields/ActivitySectorTxt__c.field-meta.xml
<CustomField>
    <fullName>ActivitySectorTxt__c</fullName>
    <label>Setor de Atividade do Material</label>
    <length>18</length>
    <type>Text</type>
</CustomField>