force-app/main/default/objects/SummarizedRevenue__c/fields/CustomIdTxt__c.field-meta.xml
<CustomField>
    <fullName>CustomIdTxt__c</fullName>
    <description>CONCATENAÇÃO:
Código cliente + Código organização de vendas + Código canal de distribuição + Código setor atividade</description>
    <externalId>true</externalId>
    <label>Id Customizado</label>
    <length>28</length>
    <required>true</required>
    <type>Text</type>
</CustomField>