force-app/main/default/objects/SummarizedRevenue__c/fields/DateDt__c.field-meta.xml
<CustomField>
    <fullName>DateDt__c</fullName>
    <label>Data</label>
    <type>Date</type>
</CustomField>