force-app/main/default/objects/SummarizedRevenue__c/fields/MaterialGroupTxt__c.field-meta.xml
<CustomField>
    <fullName>MaterialGroupTxt__c</fullName>
    <label>Grupo de Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MaterialsGroup</valueSetName>
    </valueSet>
</CustomField>