force-app/main/default/objects/SummarizedRevenue__c/fields/ROBIrrigationMixNmb__c.field-meta.xml
<CustomField>
    <fullName>ROBIrrigationMixNmb__c</fullName>
    <label>ROB s/ IPI - Mix Irriga</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>