force-app/main/default/objects/SummarizedRevenue__c/fields/ROBNewOfferNmb__c.field-meta.xml
<CustomField>
    <fullName>ROBNewOfferNmb__c</fullName>
    <label>ROB s/ IPI - Lançamento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>