force-app/main/default/objects/SummarizedRevenue__c/fields/ROBNmb__c.field-meta.xml
<CustomField>
    <fullName>ROBNmb__c</fullName>
    <label>ROB s/ IPI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>