force-app/main/default/objects/SummarizedRevenue__c/fields/ROBRevenueNmb__c.field-meta.xml
<CustomField>
    <fullName>ROBRevenueNmb__c</fullName>
    <label>ROB s/IPI - Faturamento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>