force-app/main/default/objects/SummarizedRevenue__c/fields/ROBRunnerNmb__c.field-meta.xml
<CustomField>
    <fullName>ROBRunnerNmb__c</fullName>
    <label>ROB s/ IPI - Runner</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>