force-app/main/default/objects/SummarizedRevenue__c/fields/ROBsIPILancamentoPVCNmb__c.field-meta.xml
<CustomField>
    <fullName>ROBsIPILancamentoPVCNmb__c</fullName>
    <label>ROB sIPI Lançamento PVC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>