force-app/main/default/objects/SummarizedRevenue__c/fields/ROBsIPIRunnerPVCNmb__c.field-meta.xml
<CustomField>
    <fullName>ROBsIPIRunnerPVCNmb__c</fullName>
    <label>ROB sIPI Runner PVC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>