force-app/main/default/objects/SummarizedRevenue__c/fields/ROBSpecialNmb__c.field-meta.xml
<CustomField>
    <fullName>ROBSpecialNmb__c</fullName>
    <label>ROB s/ IPI - Especial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>