force-app/main/default/objects/SummarizedRevenue__c/fields/ROLIrrigationMixNmb__c.field-meta.xml
<CustomField>
    <fullName>ROLIrrigationMixNmb__c</fullName>
    <label>ROL - Mix Irriga</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>