force-app/main/default/objects/SummarizedRevenue__c/fields/ROLNewOfferNmb__c.field-meta.xml
<CustomField>
    <fullName>ROLNewOfferNmb__c</fullName>
    <label>ROL - Lançamento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>