force-app/main/default/objects/SummarizedRevenue__c/fields/ROLRevenueNmb__c.field-meta.xml
<CustomField>
    <fullName>ROLRevenueNmb__c</fullName>
    <label>ROL - Faturamento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>