force-app/main/default/objects/SummarizedRevenue__c/fields/ROLRunnerNmb__c.field-meta.xml
<CustomField>
    <fullName>ROLRunnerNmb__c</fullName>
    <label>ROL - Runner</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>