force-app/main/default/objects/SummarizedRevenue__c/fields/ROLSpecialNmb__c.field-meta.xml
<CustomField>
    <fullName>ROLSpecialNmb__c</fullName>
    <label>ROL - Especial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>