force-app/main/default/objects/SummarizedRevenue__c/fields/SalesAreaLkp__c.field-meta.xml
<CustomField>
    <fullName>SalesAreaLkp__c</fullName>
    <label>Área de Negócios</label>
    <referenceTo>AccountAreaSales__c</referenceTo>
    <relationshipLabel>Faturamentos Sumarizados</relationshipLabel>
    <relationshipName>Faturamentos_Sumarizados</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>