force-app/main/default/objects/SummarizedRevenue__c/fields/SystemTxt__c.field-meta.xml
<CustomField>
    <fullName>SystemTxt__c</fullName>
    <label>Sistema</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>System</valueSetName>
    </valueSet>
</CustomField>