force-app/main/default/objects/SummarizedRevenue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CustomIdTxt__c</columns>
    <columns>SalesAreaLkp__c</columns>
    <columns>DateDt__c</columns>
    <columns>ROLRevenueNmb__c</columns>
    <columns>ROBRevenueNmb__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>